# neurograph

./: .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEFERRED.md  Dockerfile  Dockerfile.api  GITHUB_TOPICS.md  GRAPH_ANALYSIS.md  MANIFEST.in  README.md  RELEASE_CHECKLIST_v1.0.0.md  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  STATUS.md  architecture_blueprint.json  mypy.ini  pyproject.toml  stress_100m_output.txt  stress_10m_output.txt  stress_1m_output.txt  test_results_output.txt
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: docs.yml  main-ci.yml  publish-python.yml  publish-typescript.yml  python-client-ci.yml  security.yml  typescript-client-ci.yml
config/docker/: Dockerfile.api  docker-compose.production.yml  docker-compose.yml
config/monitoring/: prometheus-alerts.yml  prometheus.yml
config/monitoring/grafana/: README.md
config/python/: pytest.ini
docs/: API_KEY_ROTATION.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  DOCKER.md  DOCUMENTATION_REVIEW_v1.0.0.md  MASTER_PLAN_v3.0.md  PERFORMANCE_SUMMARY.md  PHASE_3.1_MONITORING_COMPLETE.md  PRODUCTION_DEPLOYMENT.md  README.md  REST_API_100M_ANALYSIS.md  SECURITY.md  SECURITY_AUDIT.md  TEST_RESULTS.md
docs/adr/: 001-rust-pyo3-architecture.md  002-8d-coordinate-system.md  003-websocket-streaming.md  004-token-architecture.md  005-cdna-profiles.md
docs/deployment/: PRODUCTION.md
docs/guides/: AUTH_GUIDE.md  GATEWAY_GUIDE.md  GETTING_STARTED.md  PYPI_PUBLISHING_GUIDE.md  SIGNAL_SYSTEM_GUIDE.md
docs/monitoring/: LOGGING.md
docs/project/: CONTRIBUTING.md  STATUS.md
docs/security/: AUDIT_REPORT.md
docs/source/: architecture.rst  changelog.rst  conf.py  configuration.rst  contributing.rst  index.rst  quickstart.rst  testing.rst
docs/testing/: v0.64.1-tokens-router-tests.md
docs/tutorials/: README.md
grafana/dashboards/: 01-system-overview.json  03-token-grid-metrics.json
src/action_controller/: controller.py  registry.py  selector.py
src/api/: cache.py  config.py  dependencies.py  error_handlers.py  logging_config.py  main.py  middleware.py
src/core_rust/: Cargo.toml  clippy_output.txt  setup.py
src/gateway/: gateway.py
src/integration/: pipeline.py
src/neurograph_jupyter/: __init__.py  cli.py  display.py  helpers.py  magic.py  plotly_viz.py  query_builder.py  widgets.py
tests/: README.md  requirements.txt  test_websocket.py  test_websocket_advanced.py
tests/e2e/: conftest.py  test_pipeline_with_core.py  test_runtime.py  test_signal_system_core.py  test_websocket.py
tests/integration/: conftest.py  test_api_keys.py  test_auth_flow.py  test_integration_pipeline.py  test_pipeline_with_core.py  test_rate_limiting.py  test_signal_system_core.py
tests/performance/: analyze_100m_test.py  benchmark_full_system.py  benchmark_stress_test.py  locustfile.py  requirements.txt  rest_api_benchmark.py  rest_api_benchmark_100k_20260111_130338.json  rest_api_benchmark_100m_20260111_142451.json  rest_api_benchmark_10k_20260111_130324.json  rest_api_benchmark_10m_20260111_131656.json  rest_api_benchmark_1k_20260111_130311.json  rest_api_benchmark_1m_20260111_130708.json  stress_benchmark.py  stress_benchmark_100m_20260110_222728.json  stress_benchmark_10m_20260110_222626.json  stress_benchmark_1m_20260110_222602.json  test_api_server.py  test_status_performance.py
tests/unit/: __init__.py  test_action_controller_core.py  test_action_executors.py  test_adapters.py  test_encoders.py  test_gateway_core.py  test_gateway_models.py  test_jupyter_integration.py  test_query.py  test_sensor_registry.py  test_subscription_filter.py  test_types.py
(+123 files in other folders)
